WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109226
[GTK][AC] GraphicsLayerClutter doesn't need to recalculate its position after changing anchor position.
https://bugs.webkit.org/show_bug.cgi?id=109226
Summary
[GTK][AC] GraphicsLayerClutter doesn't need to recalculate its position after...
ChangSeok Oh
Reported
2013-02-07 13:31:22 PST
Nothing drawn after replacing clutter_actor_set_anchor_point with clutter_actor_set_pivot_point. The main reason is position of graphicsLayer. As I mentioned in
bug109037
, clutter has a different coordinate system from mac port's, so I think we don't need to recalulate the position after changing anchor position.
https://developer.apple.com/library/ios/#documentation/Cocoa/Conceptual/CoreAnimation_guide/CoreAnimationBasics/CoreAnimationBasics.html#//apple_ref/doc/uid/TP40004514-CH2-SW15
Attachments
Patch
(2.79 KB, patch)
2013-02-07 14:42 PST
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
Patch
(2.72 KB, patch)
2013-02-07 15:01 PST
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2013-02-07 14:42:10 PST
Created
attachment 187179
[details]
Patch
ChangSeok Oh
Comment 2
2013-02-07 15:01:52 PST
Created
attachment 187184
[details]
Patch
WebKit Review Bot
Comment 3
2013-02-08 05:36:45 PST
Comment on
attachment 187184
[details]
Patch Clearing flags on attachment: 187184 Committed
r142265
: <
http://trac.webkit.org/changeset/142265
>
WebKit Review Bot
Comment 4
2013-02-08 05:36:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug