[GTK][AC] GraphicsLayerClutter doesn't need to recalculate its position after changing anchor position. https://bugs.webkit.org/show_bug.cgi?id=109226

Patch by ChangSeok Oh <shivamidow@gmail.com> on 2013-02-08
Reviewed by Gustavo Noronha Silva.

Clutter has a different coordinate system from mac port's, so we don't need to
recalulate GraphicsLayer position after changing its anchor position.

Covered by existing ac tests.

* platform/graphics/clutter/GraphicsLayerClutter.cpp:
(WebCore::GraphicsLayerClutter::updateGeometry):

Canonical link: https://commits.webkit.org/127509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142265 268f45cc-cd09-0410-ab3c-d52691b4dbfc